# DeepSeek-VL2

./: .gitignore  .gitmodules  app.py  flake.nix  inference.py  main.py  pyproject.toml
templates/: index.html
