[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepseek_vl2"
version = "1.0.0"
description = "DeepSeek-VL2"
authors = [{name = "DeepSeek-AI"}]
license = {file = "LICENSE-CODE"}
urls = {homepage = "https://github.com/deepseek-ai/DeepSeek-VL2"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask",
    "torch",
    "transformers==4.38.2",
    "timm>=0.9.16",
    "xformers>=0.0.21",
    "accelerate",
    "sentencepiece",
    "attrdict",
    "einops",
    "httpx[socks]",
]

[project.optional-dependencies]
gradio = [
    "gradio",
    "gradio-client",
    "mdtex2html",
    "pypinyin",
    "tiktoken",
    "tqdm",
    "colorama",
    "Pygments",
    "markdown",
    "SentencePiece"
]
lint = [
    "isort",
    "black[jupyter] >= 22.6.0",
    "pylint[spelling] >= 2.15.0",
    "flake8",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-docstrings",
    "flake8-pyi",
    "flake8-simplify",
    "ruff",
    "pyenchant",
    "pre-commit",
]

[tool.setuptools]
packages = {find = {exclude = ["images"]}}
